# f1tarmo_core

./: .gitignore  README.md
docs/: bill_of_materials.md  build_guide.md  controller_setup.md
f1tarmo_bringup/: CMakeLists.txt  README.md  package.xml
f1tarmo_bringup/launch/: f1tarmo.launch.py  joy_teleop.launch.py  vesc.launch.py
f1tarmo_bringup/params/: f1tarmo_params.yaml
f1tarmo_controllers/: README.md  package.xml  setup.cfg  setup.py
f1tarmo_controllers/f1tarmo_controllers/: bicycle_controller_node.py
f1tarmo_description/: CMakeLists.txt  README.md  package.xml
f1tarmo_description/launch/: description.launch.py
f1tarmo_description/model/: config.json  f1tarmo.urdf.xacro  robot.urdf
f1tarmo_description/model/assets/: 8961k15_steel_din_3_rail.part  8961k15_steel_din_3_rail.stl  a01.part  a01.stl  a02.part  a02.stl  a03.part  a03.stl  a04.part  a04.stl  a05.part  a05.stl  a06.part  a06.stl  b01.part  b01.stl  b02.part  b02.stl  b03.part  b03.stl  b04.part  b04.stl  b05.part  b05.stl  b06.part  b06.stl  b07_t.part  b07_t.stl  b09.part  b09.stl  b10_t.part  b10_t.stl  b11_t.part  b11_t.stl  b12_t.part  b12_t.stl  b13_t.part  b13_t.stl  bearing.part  bearing.stl  (+20 more)
f1tarmo_description/model/assets/merged/: drive_assembly_collision.stl  left_bearing_hub_assembly_collision.stl  right_bearing_hub_assembly_visual.stl  wheel_110mm_2_collision.stl  wheel_110mm_2_visual.stl  wheel_110mm_3_collision.stl  wheel_110mm_3_visual.stl  wheel_110mm_4_collision.stl  wheel_110mm_collision.stl  wheel_110mm_visual.stl
f1tarmo_description/rviz/: config.rviz
