<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tarmo_description</name>
  <version>0.0.2</version>
  <description>f1tarmo URDF description</description>
  <maintainer email="nlitz88@gmail.com">nlitz88</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- The D435i URDF comes from the realsense2_description package. -->
  <depend>realsense2_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
